most sections started

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_prerequisites.adoc
@@ -22,7 +22,7 @@ include::proc_Changing_the_maximum_number_of_concurrent_migrations.adoc[leveloff
 [id="Choosing_vddk_or_ssh_transformation"]
 == Choosing VDDK or SSH transformation
 
-Choose the transformation option, VDDK or SSH, that is appropriate for your environment, taking into account the following considerations.
+Choose a datapath transformation option, VDDK (VMware Virtual Disk Development kit) or SSH, that is appropriate for your migration and environment.
 
 *VDDK*
 
@@ -31,7 +31,7 @@ Choose the transformation option, VDDK or SSH, that is appropriate for your envi
 ** Compiled with `nbdkit` to provide direct connectivity to the virtual machine disks
 * Cons:
 ** Requires VDDK package download
-** Requires a VDDK library location for configuring conversion hosts
+** Requires VDDK library location for configuring the conversion hosts
 
 *SSH*
 
@@ -40,16 +40,10 @@ Choose the transformation option, VDDK or SSH, that is appropriate for your envi
 ** Does not require additional downloads, packages, tools, or compilation
 * Cons:
 ** Slower than VDDK
-** SSH access must be enabled on the VMware hypervisors
-** VMware and target environments must share SSH keys
+** Requires SSH access enabling on the VMware hypervisors
+** Requires shared SSH keys for VMware and the target environment
 
-After you have decided how many conversion hosts to create and whether to use VDDK or SSH, you can proceed to the next step.
+After you have decided how many conversion hosts to create and which transformation method to use, you can proceed to the next step:
 
-.Red Hat Virtualization
-
-. Select one or more existing hosts (on physical machines, not virtual machines) to use as conversion hosts.
-. Configure the conversion hosts for xref:Configuring_conversion_hosts_for_transformation[SSH or VDDK transformation].
-
-.OpenStack Platform
-
-xref:Creating_OSP_conversion_hosts[Create the OpenStack Platform conversion hosts].
+* Red Hat Virtualization: xref:Configuring_conversion_hosts_in_CloudForms[].
+* OpenStack Platform: xref:Creating_OSP_conversion_hosts[].
