--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_osp_conversion_hosts.adoc
@@ -37,12 +37,4 @@ For optimal performance:
 * Deploy the conversion hosts on a compute node with link:http://docs.openstack.org/developer/devstack/guides/devstack-with-nested-kvm.html[nested virtualization] enabled. Nested virtualization is a technology preview.
 ====
 
-. Add the SSH key for `cloud-user` in CloudForms:
-
-.. Click menu:Compute[Clouds > Providers] and select the OpenStack Platform provider.
-.. From the *Configuration* dropdown menu, select *Edit Selected Cloud Provider*.
-.. Click the *RSA key pair* tab in the *Endpoints* section.
-.. Enter the *Username*, `cloud-user`.
-.. Click *Choose File*, browse to the SSH key file that you use to create OpenStack Platform instances, and click *Save*.
-
-You are ready to configure the conversion hosts for SSH or VDDK transformation. See xref:Configuring_conversion_hosts_for_transformation[].
+You are ready to xref:Configuring_conversion_hosts_in_CloudForms[configure the conversion hosts in CloudForms].
