--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Migration_plan_errors.adoc
@@ -14,4 +14,4 @@
 * Virtual machines cannot be added to the migration plan with a CSV file: Check the xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file's format and fields]. Create a new migration plan with the updated CSV file.
 
 [id="Denied_state_error"]
-* `Denied State`: If a migration plan fails immediately and the migration plan displays a *Denied State* error message, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. (Red Hat Virtualization only: ensure that you have xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticated the conversion hosts]). Cancel the migration plan and xref:Retrying_a_failed_migration_plan[retry it].
+* `Denied State`: If a migration plan fails immediately and the migration plan displays a *Denied State* error message, check that you have xref:Creating_conversion_hosts[created the conversion hosts]. Cancel the migration plan and xref:Retrying_a_failed_migration_plan[retry it].
