--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Virtual_machine_migration_failure.adoc
@@ -3,7 +3,7 @@
 [[Virtual_machine_migration_failure]]
 = Virtual machine migration failure
 
-If a specific virtual machine fails to migrate, check its xref:VM_migration_log[conversion log] and review the following causes:
+If a specific virtual machine fails to migrate, check the xref:Migration_logs[migration logs] for these errors:
 
 * xref:IP_address_errors[IP address errors]
 * xref:VMware_environment_errors[VMware environment errors]
