--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -8,8 +8,7 @@ A _conversion host_ can be a Red Hat Virtualization host or an OpenStack Platfor
 Creating and configuring the conversion hosts involves the following key steps:
 
 . OpenStack Platform only: xref:Creating_OSP_conversion_hosts[Creating the OpenStack Platform conversion hosts]
-. xref:Configuring_conversion_hosts_for_transformation[Configuring the conversion hosts for VDDK or SSH transformation]
-. Red Hat Virtualization only: xref:Authenticating_rhv_conversion_hosts_in_cloudforms[Authenticating the Red Hat Virtualization conversion hosts]
+. xref:Configuring_conversion_hosts_in_CloudForms[Configuring the conversion hosts in CloudForms]
 . Validating the xref:Verifying_conversion_hosts[conversion hosts]
 
 [NOTE]
@@ -29,6 +28,5 @@ If you upgrade your target environment, upgrade the conversion hosts:
 
 include::con_Conversion_host_prerequisites.adoc[leveloffset=+1]
 include::proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
-include::proc_Configuring_conversion_hosts_for_transformation.adoc[leveloffset=+1]
-include::proc_Authenticating_rhv_conversion_hosts_in_cloudforms.adoc[leveloffset=+1]
+include::proc_Configuring_conversion_hosts_in_CloudForms.adoc[leveloffset=+1]
 include::proc_Verifying_conversion_hosts.adoc[leveloffset=+1]
