--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Migration_plan_prerequisites.adoc
@@ -5,9 +5,9 @@
 
 The following prerequisites apply to certain migrations:
 
-* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file], if you are migrating previously migrated virtual machines. Previously migrated virtual machines are added to the migration plan with a CSV file. The migration plan cannot discover these virtual machines automatically because their status is `migrated` in the CloudForms database.
+* xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file], to add previously migrated virtual machines to the migration plan. The migration plan cannot discover these virtual machines automatically because their status is `migrated` in the CloudForms database.
 
-* xref:Adding_ansible_playbooks_to_cloudforms[Ansible configuration in CloudForms], if you are using Ansible playbooks to automate tasks before or after migration
+* xref:Adding_ansible_playbooks_to_cloudforms[Ansible configuration in CloudForms], if you are using pre- or postmigration playbooks
 
 * xref:Rhel_premigration_playbook[`RHEL premigration` playbook], if you are migrating virtual machines running RHEL or other Linux-based operating system, to ensure that their IP addresses are accessible after migration
 
