--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Changing_the_maximum_number_of_concurrent_migrations.adoc
@@ -7,8 +7,12 @@ The default number of concurrent migrations is `10` for conversion hosts and `10
 
 [IMPORTANT]
 ====
-The maximum number of concurrent virtual machine migrations per conversion host is `20` for both VDDK and SSH transformation. The SSH limitation, however, applies only to RHV 4.2.5, not to later versions of RHV.
+The maximum number of concurrent virtual machine migrations per conversion host is `20` for VDDK and `?` for SSH.
+
+PLACEHOLDER: Confirm maximum numbers for VDDK and SSH.
 ====
+
+// ​Fabien: We should ask QE and Rich Jones what the limits are for both VDDK and SSH. I thought we worked around these limits by using direct connection to ESXi...
 
 The provider's limit has priority over the conversion hosts' limits. For example, if a provider's limit is set to `20` and five conversion hosts' limits are set to `3`, the maximum number of concurrent migrations is `20`, not `15`.
 
@@ -18,21 +22,16 @@ An increase affects all migration plans immediately. Virtual machines that are q
 
 A decrease affects future migration plans. Migration plans that are in progress will continue to use the limit that was set when the plan was created.
 
-To change the limit for all conversion hosts:
-
-* While configuring the  xref:VDDK_and_SSH_Configuring_the_conversion_hosts[conversion hosts], you can set the `v2v_max_concurrent_conversions` variable in `extra_vars.yml` to the new limit.
-
-* After creating the conversion hosts, you can click menu:Compute[Migration > Migration Settings] in CloudForms and select the new limit.
+To change the limit for all conversion hosts, click menu:Compute[Migration > Migration Settings] in CloudForms and select the new limit.
 
 To change the limit for a specific conversion host, enter the following command on the CloudForms machine:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# vmdb
-# rails console
-irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeWorkspaceRuntime.new)
-irb(main):002:0> $evm.vmdb(:host).find_by(:name => "_host1.example.com_").custom_set("Max Transformation Runners", _20_)
+API PLACEHOLDER
 ----
+
+// To do: Fill in API calls
 
 *Changing the limit for a provider*
 
@@ -40,18 +39,12 @@ To set a provider's limit to `30`, enter the following command on the CloudForms
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# vmdb
-# rails console
-irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeWorkspaceRuntime.new)
-irb(main):002:0> $evm.vmdb(:ext_management_system).find_by(:name => "_provider_").custom_set("Max Transformation Runners", _30_)
+API PLACEHOLDER
 ----
 
 To get a provider's limit, enter the following command on the CloudForms machine:
 
 [options="nowrap" subs="+quotes,verbatim"]
 ----
-# vmdb
-# rails console
-irb(main):001:0> $evm = MiqAeMethodService::MiqAeService.new(MiqAeEngine::MiqAeWorkspaceRuntime.new)
-irb(main):002:0> $evm.vmdb(:ext_management_system).find_by(:name => "_provider_").custom_get("Max Transformation Runners")
+API PLACEHOLDER
 ----
