--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Infrastructure_mapping_errors.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Infrastructure_mapping_errors.adoc
@@ -11,7 +11,7 @@
 .Red Hat Virtualization errors
 
 [id="RHV_infrastructure_mapping_missing_networks"]
-* `Networks missing` error message: This error occurs if the conversion hosts are not authenticated. Delete the infrastructure mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticate the conversion hosts in CloudForms], and create a new  infrastructure mapping.
+// * `Networks missing` error message: This error occurs if the conversion hosts are not authenticated. Delete the infrastructure mapping, xref:Enabling_rhv_conversion_hosts_in_cloudforms[authenticate the conversion hosts in CloudForms], and create a new  infrastructure mapping.
 
 [id="RHV_infrastructure_mapping_missing_networks_datastore"]
 * `Networks missing` and `Datastores missing` error messages. If you refresh the hosts, the provider's object IDs change. Delete the infrastructure mapping and create a new one.
