--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -28,15 +28,18 @@ What am I missing?::
 
 What impact will the migration have on my users?::
 * Assess the effect the migration may have on a production environment.
+* It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
 * Check whether users will lose access to critical applications.
 
 How long will the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. A xref:Migration_example[Red Hat Virtualization migration example] is provided as a guide.
-* It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
-
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
++
+The following example is provided as a guide.
++
 [id="Migration_example"]
 .Red Hat Virtualization migration example
-
++
+====
 * Duration of migration: 1:15:53 (HH:MM:SS)
 * 10 virtual machines (100 GB RAM, 1000 GB storage)
 * Total data migrated, using VDDK: 1000 GB
@@ -46,3 +49,4 @@ How long will the migration take?::
 ** Fast SSD XtremIO storage
 ** Fibre Channel 8 interface for host-to-storage connection
 ** 10 GbE network interface cards for all other connections
+====
