--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,22 +1,27 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 to Red Hat Virtualization 4.3 (or later) or to Red Hat OpenStack Platform 13 (or later):
+Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 to Red Hat Virtualization 4.3 or to Red Hat OpenStack Platform 13 or 14:
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
 * link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] enables you to build a private or public cloud on top of Red Hat Enterprise Linux. OpenStack Platform is scaleable and fault-tolerant.
 
-The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. CloudForms enables you to map your VMware resources to the target environment and to create and run a migration plan.
+[NOTE]
+====
+PLACEHOLDER: Migration of single VM to CNV. Link to CNV doc.
+====
 
-The Infrastructure Migration Solution has the following key phases:
+The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. Using CloudForms, you map your VMware resources to the target environment and create and run a migration plan.
+
+Infrastructure migration has the following key steps:
 
 . xref:Planning_the_migration[Planning the migration]
 +
-* Assessing the source and environments to ensure sufficient resources for migration
+* Assessing your source and target environments to ensure that you have sufficient resources
 * Formulating strategies to minimize the impact on users
 
-. xref:Preparing_the_environment_for_migration[Preparing the environment]
+. xref:Preparing_the_environment_for_migration[Preparing the environment for migration]
 +
 * Preparing the source environment
 * Preparing the target environment
@@ -24,9 +29,13 @@ The Infrastructure Migration Solution has the following key phases:
 
 . xref:Migrating_the_infrastructure[Migrating the infrastructure]
 +
-* Mapping the VMware resources to the target infrastructure
-* Creating and running a migration plan
-* xref:Troubleshooting[Troubleshooting], if necessary
+* Mapping the source resources to the target infrastructure
+* Creating and running a migration plan.
+
+For troubleshooting, see xref:Troubleshooting[] and the migration workflows and components:
+
+* VMware to Red Hat Virtualization (xref:Vmware_to_osp_workflow[])
+* VMware to OpenStack Platform (xref:Vmware_to_osp_workflow[])
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
