--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning_the_migration.adoc
@@ -1,7 +1,9 @@
 [[Planning_the_migration]]
 = Planning the migration
 
-During the planning phase, formulate a specific migration goal (for example, "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months"). The following resources can help you create steps toward that goal:
+During the planning phase, formulate a specific migration goal, for example, "I want to migrate 2000{nbsp}virtual machines, with 200{nbsp}TB of data, in less than 6 months".
+
+The following resources can help you plan the steps toward that goal:
 
 * xref:Questions_to_ask_before_migration[Questions to ask before migration]
 * xref:Recommendations_for_migration[Recommendations for migration]
