--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_configuring_the_conversion_hosts.adoc
@@ -3,7 +3,7 @@
 [id="Creating_and_configuring_the_conversion_hosts"]
 = Creating and configuring the conversion hosts
 
-A _conversion host_ can be a Red Hat Virtualization host or an OpenStack Platform instance created from a conversion host appliance. `virt-v2v` and `virt-v2v-wrapper`, running on the conversion host, perform the migration process.
+A _conversion host_ is a Red Hat Virtualization host or an OpenStack Platform instance, created from a conversion host appliance, with `virt-v2v` and `virt-v2v-wrapper` installed.
 
 Creating and configuring the conversion hosts involves the following key steps:
 
@@ -11,9 +11,9 @@ Creating and configuring the conversion hosts involves the following key steps:
 . xref:Configuring_conversion_hosts_in_CloudForms[Configuring the conversion hosts in CloudForms]
 . Validating the xref:Verifying_conversion_hosts[conversion hosts]
 
-[NOTE]
-====
-If you upgrade your target environment, upgrade the conversion hosts:
+.Upgrading the conversion hosts
+
+To upgrade the conversion hosts:
 
 * Red Hat Virtualization: Enter the following commands on the Manager machine:
 +
@@ -24,7 +24,6 @@ If you upgrade your target environment, upgrade the conversion hosts:
 ----
 
 * OpenStack Platform: Download the latest conversion appliance and create new conversion hosts.
-====
 
 include::con_Conversion_host_prerequisites.adoc[leveloffset=+1]
 include::proc_Creating_osp_conversion_hosts.adoc[leveloffset=+1]
