--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Preparing_the_target_environment.adoc
@@ -5,8 +5,8 @@
 
 Prepare your target environment for migration:
 
-** Red Hat Virtualization: xref:Preparing_the_rhv_target_environment[]
-** OpenStack Platform: xref:Preparing_the_osp_target_environment[]
+** xref:Preparing_the_rhv_target_environment[]
+** xref:Preparing_the_osp_target_environment[]
 
 include::proc_Preparing_the_rhv_target_environment.adoc[leveloffset=+1]
 include::proc_Preparing_the_osp_target_environment.adoc[leveloffset=+1]
