--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Adding_ansible_playbooks_to_cloudforms.adoc
@@ -7,16 +7,16 @@ You can add Ansible playbooks to CloudForms to perform automated tasks, for exam
 
 [IMPORTANT]
 ====
-If you are migrating virtual machines running RHEL or other Linux-based operating system, create a `RHEL premigration` playbook, to ensure that the IP addresses of these virtual machines are accessible after migration.
+If you are migrating virtual machines running RHEL or other Linux-based operating system, create a `RHEL premigration` playbook  to ensure that the IP addresses of these virtual machines are accessible after migration.
 ====
 
 CloudForms requires a minimum of one Ansible playbook repository, one playbook, and one set of credentials.
 
+[id="Creating_an_Ansible_service_catalog_item"]
 .Procedure
 
 . Enable the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html/managing_providers/automation_management_providers#enabling-embedded-ansible-server-role[`Embedded Ansible` role].
 
-[id="Creating_an_Ansible_service_catalog_item"]
 . Create an link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-inside[Ansible playbook repository].
 
 . Add the link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html/managing_providers/automation_management_providers#ansible-credentials[Ansible credentials] for your virtual machines.
@@ -30,7 +30,7 @@ If you are migrating virtual machines running RHEL or other Linux-based operatin
 
 [IMPORTANT]
 ====
-This role is required for both Red Hat Virtualization and OpenStack Platform. Otherwise, you will not be able to access the IP addresses of the migrated virtual machines.
+This role is required for both Red Hat Virtualization and OpenStack Platform. Otherwise, you cannot access the IP addresses of the migrated virtual machines.
 ====
 
 The `ims.rhel_premigration` role performs the following tasks on the source virtual machine:
