--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_migration_plan.adoc
@@ -10,13 +10,18 @@ Create a migration plan with an infrastructure mapping, adding the source virtua
 For large migrations, it is faster to add the virtual machines with a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] than to select them individually.
 ====
 
+.Prerequisites
+
+* Valid infrastructure mapping
+* OpenStack Platform only: Source virtual machines powered on, if you create and run a migration plan immediately
+
 .Procedure
 
 . Click menu:Compute[Migration > Migration Plans].
 
 . Click *Create Migration Plan*.
 
-. Perform the following procedures in each migration plan screen:
+. Perform the following procedures in the Migration Plan wizard:
 
 [cols="1,3", options="header"]
 |===
