--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_infrastructure_mapping.adoc
@@ -1,6 +1,6 @@
 // Module included in the following assemblies:
 // assembly_Migrating_the_infrastructure.adoc
-[id="Creating_an_Infrastructure_Mapping"]
+[id="Creating_an_infrastructure_mapping"]
 = Creating an infrastructure mapping
 
 The infrastructure mapping maps your source resources to target resources.
@@ -9,7 +9,7 @@ The infrastructure mapping maps your source resources to target resources.
 
 . Click menu:Compute[Migration > Infrastructure Mappings].
 . Click *Create Infrastructure Mapping*.
-. Perform the following procedures in each infrastructure mapping screen:
+. Perform the following procedures in the Infrastructure Mapping wizard:
 
 [cols="1,3", options="header"]
 |===
@@ -38,6 +38,9 @@ The infrastructure mapping maps your source resources to target resources.
 |*Map Networks*
 .<a|. Select a source cluster from the drop-down list.
 . Select one or more source networks and a target network.
++
+*OpenStack Platform only:* IMS supports both provider and tenant networks.
+
 . Click *Add Mapping*. You can map the networks of additional source clusters.
 . Click *Create*.
 
