--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Running_a_migration_plan.adoc
@@ -3,9 +3,15 @@
 [id="Running_a_migration_plan"]
 = Running a migration plan
 
-You can run the migration plan xref:Running_migration_plan_immediately[immediately] or in the xref:Running_migration_plan_future[future], depending on the schedule option that you selected.
+You can run the migration plan xref:Running_migration_plan_immediately[immediately] or in the xref:Running_migration_plan_future[future], depending on the schedule option that you select.
 
 Optionally, you can xref:Canceling_a_migration_plan[cancel a migration plan] that has started running.
+
+.Prerequisites
+
+* Valid infrastructure mapping
+* Valid migration plan
+* OpenStack Platform only: Source virtual machines powered on
 
 [id="Running_migration_plan_immediately"]
 == Running a migration plan immediately
