--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,20 +1,20 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware 5.5 to Red Hat Virtualization 4.3 or to Red Hat OpenStack Platform 13 or 14:
+The Red Hat Infrastructure Migration Solution (IMS) enables you to migrate virtual machines from VMware{nbsp}5.5 (and later) to the following target environments:
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization[Red Hat Virtualization] 4.3 (RHV). RHV is a virtualization platform built on Red Hat Enterprise Linux (RHEL{nbsp}7). You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
-* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] enables you to build a private or public cloud on top of Red Hat Enterprise Linux. OpenStack Platform is scaleable and fault-tolerant.
+* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform[Red Hat OpenStack Platform] 13/14. OpenStack Platform enables you to build a private or public cloud on top of RHEL. OpenStack Platform is scaleable and fault-tolerant.
 
 [NOTE]
 ====
-PLACEHOLDER: Migration of single VM to CNV. Link to CNV doc.
+PLACEHOLDER: CNV migration and link to CNV doc.
 ====
 
-The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. Using CloudForms, you map your VMware resources to the target environment and create and run a migration plan.
+The migration process is performed with link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure.
 
-Infrastructure migration has the following key steps:
+The infrastructure migration has the following key steps:
 
 . xref:Planning_the_migration[Planning the migration]
 +
@@ -32,10 +32,11 @@ Infrastructure migration has the following key steps:
 * Mapping the source resources to the target infrastructure
 * Creating and running a migration plan.
 
-For troubleshooting, see xref:Troubleshooting[] and the migration workflows and components:
+For troubleshooting information, see the following:
 
-* VMware to Red Hat Virtualization (xref:Vmware_to_osp_workflow[])
-* VMware to OpenStack Platform (xref:Vmware_to_osp_workflow[])
+* xref:Vmware_to_rhv_migration_workflow[]
+* xref:Vmware_to_osp_migration_workflow[]
+* xref:Troubleshooting[]
 
 include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
 include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
