--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/assembly_Creating_and_running_a_migration_plan.adoc
@@ -9,7 +9,7 @@ The infrastructure migration involves the following key stages:
 
 * Source virtual machines that have been migrated in the past
 * Source virtual machines running RHEL or other Linux-based operating system
-* Ansible playbooks for automating tasks before and/or after migration
+* Ansible playbooks for automating premigration and postmigration tasks
 
 . xref:Creating_a_migration_plan[Creating the migration plan]
 . xref:Running_a_migration_plan[Running the migration plan] immediately or in the future.
