--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -1,24 +1,26 @@
 // Module included in the following assemblies:
 // assembly_Infrastructure_migration_solution_overview.adoc
-[id="Vmware_to_rhv_workflow"]
-= VMware to Red Hat Virtualization migration workflow
+[id="Vmware_to_rhv_migration_workflow"]
+= Red Hat Virtualization migration workflow
 
-This workflow describes the process of migrating from VMware to Red Hat Virtualization after creating the infrastructure mapping and the migration plan.
+This diagram describes the migration process after you have created the infrastructure mapping and the migration plan in CloudForms.
 
-image:vmware_to_rhv_migration_workflow.png[]
+.VMware to Red Hat Virtualization migration workflow
 
-image:circle_step_numbers/1.png[25,25] You run the migration plan.
+image::vmware_to_rhv_migration_workflow.png[]
 
-image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to locate the VMware virtual machines to be migrated.
+image:circle_step_numbers/1.png[25,25] You run the migration plan in CloudForms.
 
-image:circle_step_numbers/3.png[25,25] If VDDK transformation is used, the ESXi host fingerprint is captured for authentication during the virtual machine conversion process.
+image:circle_step_numbers/2.png[25,25] CloudForms uses the migration plan to locate the source virtual machines to be migrated.
 
-image:circle_step_numbers/4.png[25,25] Using the attributes defined for the RHV environment, CloudForms initiates communication with the conversion hosts.
+image:circle_step_numbers/3.png[25,25] If you are using the `VMware Virtual Disk Development Kit` (VDDK) datapath transformation option, CloudForms captures the ESXi host fingerprint for authentication during the virtual machine conversion process.
 
-image:circle_step_numbers/5.png[25,25] The RHV conversion host connects to the VMware datastore through the ESXi host with `virt-v2v-wrapper`, streams the disks to be converted to the RHV data storage domain with `virt-v2v`, and converts the disks.
+image:circle_step_numbers/4.png[25,25] Using the attributes defined for the RHV environment, CloudForms initiates communication with the RHV conversion host. (A conversion host is a RHV host with `virt-v2v` and `virt-v2v-wrapper` installed.)
 
-image:circle_step_numbers/6.png[25,25] The virtual machine is created in the RHV environment. The RHV virtual machine uses the VMware virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
+image:circle_step_numbers/5.png[25,25] The RHV conversion host connects to the source datastore through the ESXi host (using `virt-v2v-wrapper`), streams the disks to be converted to the RHV data domain (using `virt-v2v`), and converts the disks.
 
-image:circle_step_numbers/7.png[25,25] The converted disks are attached to the RHV virtual machine. The RHV virtual machine's power state is identical to the VMware's virtual machine's premigration state.
+image:circle_step_numbers/6.png[25,25] A virtual machine is created in the RHV environment. The RHV virtual machine uses the source virtual machine’s metadata to maintain the virtual machine’s attributes (tags, power state, MAC address, CPU count, memory, disks, and virtual machine name) after migration.
+
+image:circle_step_numbers/7.png[25,25] The converted disks are attached to the RHV virtual machine. The RHV virtual machine's power state is identical to the source virtual machine's premigration state.
 
 The migration process is complete and the migration plan's status is displayed in CloudForms.
