--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Questions_to_ask_before_migration.adoc
@@ -7,21 +7,20 @@ The following questions can help you to estimate the resources required for migr
 
 What am I migrating?::
 * Identify the hosts and virtual machines to be migrated.
-* If your deployment is large and complex, you can divide your resources into migration groups.
 
 What is the maximum number of disks, virtual machines, or NICs that I can migrate?::
-* Although there is no maximum number of disks or virtual machines that you can migrate, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
-* The maximum number of NICs per virtual machine that you can migrate is 4.
-* If you exceed the capabilities of the environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage.
+* There is no maximum number of disks or virtual machines that you can migrate. However, you may not want to migrate all your virtual machines at the same time, in order to minimize the impact on your users.
+* You can migrate a maximum of four NICs with each virtual machine.
+* If you exceed the capabilities of your environment, the migrations will fail and may negatively affect existing applications running on virtual machines attached to the network and storage.
 
 What operating systems can I migrate?::
 * Supported guest operating systems: link:https://access.redhat.com/articles/1351473[]
 * Certified guest operating systems: link:https://access.redhat.com/articles/973163[]
-* Non-certified guest operating systems: Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, running these guests is not officially supported.
+* Non-certified guest operating systems: Although it is possible to migrate guest operating systems that are not certified for Red Hat Virtualization or OpenStack Platform, these guests are not officially supported.
 
-What resources will my target environment require?::
-* Your target environment must be large enough to run the migrated virtual machines in addition to the original VMware virtual machines.
-* The VMware virtual machines are not affected by the migration process.
+What resources does my target environment require?::
+* Your target environment must be large enough to run the migrated virtual machines in addition to the source virtual machines.
+* The source virtual machines are not affected by the migration process.
 
 What am I missing?::
 * Identify resource gaps, such as bandwidth, storage, licenses, or a suitable maintenance window.
@@ -31,10 +30,8 @@ What impact will the migration have on my users?::
 * It may be possible to migrate your applications in phases, without downtime at the application layer, if the applications are distributed in a high-availability architecture.
 * Check whether users will lose access to critical applications.
 
-How long will the migration take?::
-* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis.
-+
-The following example is provided as a guide.
+How long does the migration take?::
+* There are no specific rules to determine how long the actual migration will take. This is determined on a case-by-case basis. The following Red Hat Virtualization example is provided as a guide.
 +
 [id="Migration_example"]
 .Red Hat Virtualization migration example
