--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_requirements.adoc
@@ -1,9 +1,8 @@
 // Module included in the following assemblies:
 // proc_Preparing_the_rhv_target_environment.adoc
 // proc_Preparing_the_osp_target_environment.adoc
-.Prerequisite
 
-* Check that you are installing compatible software versions:
+. Check that your software versions are compatible:
 +
 .Software compatability matrix
 [cols="2,1,1,1", options="header"]
